[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yula-ai-scanner"
version = "1.0.0"
description = "YULA AI Scanner — adversarial red-teaming for LLM endpoints"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
license-files = ["LICENSE"]
authors = [
    { name = "Ihsan Bilkay" }
]
requires-python = ">=3.11"
keywords = ["ai", "security", "llm", "red-team", "prompt-injection", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.12.0,<0.16",
    "rich>=13.7.0,<14",
    "questionary>=2.0.1,<3",
    "httpx>=0.27.0,<0.29",
    "playwright>=1.44.0,<2",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.2.1,<3",
    "tenacity>=8.3.0,<10",
    "jinja2>=3.1.4,<4",
    "pyyaml>=6.0.1,<7",
    "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.23.6,<1",
    "pytest-mock>=3.14.0,<4",
]

[project.scripts]
yula-ai-scanner = "yula_ai_scanner.main:app"

[project.urls]
Homepage = "https://github.com/0xihsn/yulaai"
Issues = "https://github.com/0xihsn/yulaai/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"

[tool.setuptools.packages.find]
where = ["."]
include = ["yula_ai_scanner*"]
